Show recommendation results on the page

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,14 @@
 	</div>
 
 </div>
-
+<div id="list-recommendations">
+	<h1>
+		Results
+	</h1>	
+	<table id="list-recommendations-list">
+	
+	</table>
+</div>
 
 </body>
 </html>
