Simple filtering based on min and max amount of players

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,12 @@
 		<button type="button" onclick="getRecommendationUser()">Submit!</button> 
 	</p>
 </div>
+<div id="filters">
+	<h1>Filters</h1>
+	<h2>Players</h2>
+	<input type="number" id="minplayer-amount"> - 
+	<input type="number" id="maxplayer-amount">
+</div>
 <div id="list-games-container">
 	<h1>
 		Rated games
